--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
 
-<h1 class="text-center mt-3">Enter a country name</h1>
+  <h1 class="text-center mt-3">Enter a country name</h1>
   <div class="card card-body">
 
-    <input type="text" class="form-control mb-3" placeholder="Enter a county name..">
+    <input type="text" class="form-control mb-3" placeholder="Enter a county name.." id="countryName">
 
     <button class="btn btn-primary">Get Data</button>
 
