--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
+  <body>
+    <h1 class="text-center mt-3">Enter a country name</h1>
+    <form class="card card-body form">
+      <input
+        type="text"
+        class="form-control mb-3"
+        placeholder="Enter a county name.."
+        id="countryName"
+      />
 
-<body>
+      <input type="submit" class="btn btn-primary" value="Fetch Details" />
 
-  <h1 class="text-center mt-3">Enter a country name</h1>
-  <div class="card card-body">
-
-    <input type="text" class="form-control mb-3" placeholder="Enter a county name.." id="countryName">
-
-    <button class="btn btn-primary">Get Data</button>
-
-    <div class="output"></div>
-
-  </div>
-  <script src="app.js"></script>
-</body>
-
+      <div class="output"></div>
+    </form>
+    <script src="app.js"></script>
+  </body>
 </html>
