--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-  </head>
 
-  <body>
-    <h1 class="text-center mt-3">Enter a country name</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+</head>
+
+<body>
+  <div class="content">
+    <h1 class="text-center mt-3" id="header-title">Enter a country name</h1>
     <form class="card card-body form">
-      <input
-        type="text"
-        class="form-control mb-3"
-        placeholder="Enter a county name.."
-        id="countryName"
-      />
+      <input type="text" class="form-control mb-3" placeholder="Enter a county name.." id="countryName" />
 
-      <input type="submit" class="btn btn-primary" value="Fetch Details" />
+      <input type="submit" class="btn btn-primary" id="submitBtn" value="Fetch Details" />
 
-      <div class="output"></div>
+      <i class="fa fa-circle-o-notch fa-spin mt-3" id="spinner"
+        style="font-size: 60px; text-align: center; display:none;"></i>
+
+      <div class="output">
+      </div>
     </form>
-    <script src="app.js"></script>
-  </body>
+  </div>
+  <script src="app.js"></script>
+</body>
+
 </html>
